# piper

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  LICENSE.md  README.md
docs/: annotated.html  buffer_8hpp.html  buffer_8hpp__dep__incl.map  buffer_8hpp__dep__incl.md5  buffer_8hpp__incl.map  buffer_8hpp__incl.md5  buffer_8hpp_source.html  channel_8hpp.html  channel_8hpp_source.html  classes.html  classpiper_1_1Channel-members.html  classpiper_1_1Channel.html  classpiper_1_1Channel__coll__graph.map  classpiper_1_1Channel__coll__graph.md5  classpiper_1_1Channel__inherit__graph.map  classpiper_1_1Channel__inherit__graph.md5  classpiper_1_1Receiver-members.html  classpiper_1_1Receiver.html  classpiper_1_1Receiver__inherit__graph.map  classpiper_1_1Receiver__inherit__graph.md5  classpiper_1_1Sender-members.html  classpiper_1_1Sender.html  classpiper_1_1Sender__inherit__graph.map  classpiper_1_1Sender__inherit__graph.md5  classpiper_1_1internal_1_1AsyncBuffer-members.html  classpiper_1_1internal_1_1AsyncBuffer.html  classpiper_1_1internal_1_1AsyncBuffer__coll__graph.map  classpiper_1_1internal_1_1AsyncBuffer__inherit__graph.md5  classpiper_1_1internal_1_1Buffer-members.html  classpiper_1_1internal_1_1Buffer.html  classpiper_1_1internal_1_1Buffer__inherit__graph.map  classpiper_1_1internal_1_1Buffer__inherit__graph.md5  classpiper_1_1internal_1_1RendezvousBuffer-members.html  classpiper_1_1internal_1_1RendezvousBuffer.html  classpiper_1_1internal_1_1RendezvousBuffer__inherit__graph.map  (+123 more)
sandbox/: CMakeLists.txt  (+1 more)
tests/: CMakeLists.txt  mpsc.cpp  spmc.cpp  tests.hpp
(+37 files in other folders)
